tests/snapshots/examples@apcupsd_examples__PowerStack450.status.snap
---
source: src/main.rs
assertion_line: 964
expression: "render_metrics(test_data, \"ups0\".to_string())?"
---
# HELP apcupsd_info Metadata for apcupsd.
# TYPE apcupsd_info gauge
apcupsd_info{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614",hostname="PSI",cable="Custom Cable Smart",ups_mode="Net Master",sharenet_name="NetworkUPS",sensitivity="High",alarm_delay="5 Seconds",last_transfer_reason="Line voltage notch or spike",last_self_test_result="NO",self_test_interval="336",manufacture_date="12/18/01",firmware_version="26.5.D"} 1
# HELP apcupsd_last_update_timestamp_seconds Date and time of last update from UPS.
# TYPE apcupsd_last_update_timestamp_seconds gauge
apcupsd_last_update_timestamp_seconds{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 1018788767
# HELP apcupsd_start_timestamp_seconds Date and time apcupsd was started.
# TYPE apcupsd_start_timestamp_seconds gauge
apcupsd_start_timestamp_seconds{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 1017566614
# HELP apcupsd_line_volts Current input line voltage.
# TYPE apcupsd_line_volts gauge
apcupsd_line_volts{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 122.4
# HELP apcupsd_ups_load_percent Percentage of UPS load capacity used.
# TYPE apcupsd_ups_load_percent gauge
apcupsd_ups_load_percent{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0.44799999999999995
# HELP apcupsd_battery_charge_percent Current battery capacity charge percentage.
# TYPE apcupsd_battery_charge_percent gauge
apcupsd_battery_charge_percent{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 1
# HELP apcupsd_battery_time_left_seconds Remaining runtime left on battery as estimated by the UPS.
# TYPE apcupsd_battery_time_left_seconds gauge
apcupsd_battery_time_left_seconds{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 1500
# HELP apcupsd_battery_charge_required_for_shutdown_percent Min battery charge % (BCHARGE) required for system shutdown.
# TYPE apcupsd_battery_charge_required_for_shutdown_percent gauge
apcupsd_battery_charge_required_for_shutdown_percent{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0.05
# HELP apcupsd_battery_runtime_required_for_shutdown_seconds Min battery runtime required for system shutdown.
# TYPE apcupsd_battery_runtime_required_for_shutdown_seconds gauge
apcupsd_battery_runtime_required_for_shutdown_seconds{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 600
# HELP apcupsd_battery_runtime_trigger_shutdown_seconds Max battery runtime after which system is shutdown.
# TYPE apcupsd_battery_runtime_trigger_shutdown_seconds gauge
apcupsd_battery_runtime_trigger_shutdown_seconds{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_max_since_startup_volts Maximum input line voltage since apcupsd startup.
# TYPE apcupsd_max_since_startup_volts gauge
apcupsd_max_since_startup_volts{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 123.8
# HELP apcupsd_min_since_startup_volts Minimum input line voltage since apcupsd startup.
# TYPE apcupsd_min_since_startup_volts gauge
apcupsd_min_since_startup_volts{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 121.6
# HELP apcupsd_output_volts Current UPS output voltage.
# TYPE apcupsd_output_volts gauge
apcupsd_output_volts{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 122.4
# HELP apcupsd_power_on_delay_seconds Time UPS waits after power off when the power is restored.
# TYPE apcupsd_power_on_delay_seconds gauge
apcupsd_power_on_delay_seconds{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_power_off_delay_seconds Delay before UPS powers down after command received.
# TYPE apcupsd_power_off_delay_seconds gauge
apcupsd_power_off_delay_seconds{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 20
# HELP apcupsd_battery_low_signal_time_left_seconds Low battery signal sent when this much runtime remains.
# TYPE apcupsd_battery_low_signal_time_left_seconds gauge
apcupsd_battery_low_signal_time_left_seconds{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 120
# HELP apcupsd_transfer_low_volts Input line voltage below which UPS will switch to battery.
# TYPE apcupsd_transfer_low_volts gauge
apcupsd_transfer_low_volts{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 106
# HELP apcupsd_transfer_high_volts Input line voltage above which UPS will switch to battery.
# TYPE apcupsd_transfer_high_volts gauge
apcupsd_transfer_high_volts{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 127
# HELP apcupsd_power_on_required_charge_percent Battery charge % required after power off to restore power.
# TYPE apcupsd_power_on_required_charge_percent gauge
apcupsd_power_on_required_charge_percent{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_battery_volts Current battery voltage.
# TYPE apcupsd_battery_volts gauge
apcupsd_battery_volts{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 13.6
# HELP apcupsd_line_frequency_hertz Current line frequency in Hertz.
# TYPE apcupsd_line_frequency_hertz gauge
apcupsd_line_frequency_hertz{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 60
# HELP apcupsd_battery_number_transfers_total Number of transfers to battery since apcupsd startup.
# TYPE apcupsd_battery_number_transfers_total counter
apcupsd_battery_number_transfers_total{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 2
# HELP apcupsd_last_transfer_on_battery_timestamp_seconds Date, time of last transfer to battery since apcupsd startup.
# TYPE apcupsd_last_transfer_on_battery_timestamp_seconds gauge
apcupsd_last_transfer_on_battery_timestamp_seconds{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 1018425123
# HELP apcupsd_battery_time_on_seconds Seconds currently on battery.
# TYPE apcupsd_battery_time_on_seconds gauge
apcupsd_battery_time_on_seconds{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_battery_cumulative_time_on_seconds_total Cumulative seconds on battery since apcupsd startup.
# TYPE apcupsd_battery_cumulative_time_on_seconds_total counter
apcupsd_battery_cumulative_time_on_seconds_total{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 9
# HELP apcupsd_last_transfer_off_battery_timestamp_seconds Date, time of last transfer off battery since apcupsd startup.
# TYPE apcupsd_last_transfer_off_battery_timestamp_seconds gauge
apcupsd_last_transfer_off_battery_timestamp_seconds{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 1018425129
# HELP apcupsd_last_self_test_timestamp_seconds Date, time of last self test.
# TYPE apcupsd_last_self_test_timestamp_seconds gauge
apcupsd_last_self_test_timestamp_seconds{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 1018425123
# HELP apcupsd_status_calibration Runtime calibration occurring.
# TYPE apcupsd_status_calibration gauge
apcupsd_status_calibration{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_trim SmartTrim.
# TYPE apcupsd_status_trim gauge
apcupsd_status_trim{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_boost SmartBoost.
# TYPE apcupsd_status_boost gauge
apcupsd_status_boost{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_on_line On line.
# TYPE apcupsd_status_on_line gauge
apcupsd_status_on_line{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 1
# HELP apcupsd_status_on_battery On battery.
# TYPE apcupsd_status_on_battery gauge
apcupsd_status_on_battery{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_overloaded_output Overloaded output.
# TYPE apcupsd_status_overloaded_output gauge
apcupsd_status_overloaded_output{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_battery_low Battery low.
# TYPE apcupsd_status_battery_low gauge
apcupsd_status_battery_low{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_replace_battery Replace battery.
# TYPE apcupsd_status_replace_battery gauge
apcupsd_status_replace_battery{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_communication_lost Communications with UPS lost.
# TYPE apcupsd_status_communication_lost gauge
apcupsd_status_communication_lost{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_shutdown_in_progress Shutdown in progress.
# TYPE apcupsd_status_shutdown_in_progress gauge
apcupsd_status_shutdown_in_progress{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_slave Set if this is a slave.
# TYPE apcupsd_status_slave gauge
apcupsd_status_slave{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_slave_down Slave not responding.
# TYPE apcupsd_status_slave_down gauge
apcupsd_status_slave_down{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_on_battery_message_sent Set when UPS_ONBATT message is sent.
# TYPE apcupsd_status_on_battery_message_sent gauge
apcupsd_status_on_battery_message_sent{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_fast_poll Set on power failure to poll faster.
# TYPE apcupsd_status_fast_poll gauge
apcupsd_status_fast_poll{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_shutdown_load Set when BatLoad <= percent.
# TYPE apcupsd_status_shutdown_load gauge
apcupsd_status_shutdown_load{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_shutdown_time Set when time on batts > maxtime.
# TYPE apcupsd_status_shutdown_time gauge
apcupsd_status_shutdown_time{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_shutdown_time_left Set when TimeLeft <= runtime.
# TYPE apcupsd_status_shutdown_time_left gauge
apcupsd_status_shutdown_time_left{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_emergency_shutdown Set when battery power has failed.
# TYPE apcupsd_status_emergency_shutdown gauge
apcupsd_status_emergency_shutdown{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_remote_shutdown Set when remote shutdown.
# TYPE apcupsd_status_remote_shutdown gauge
apcupsd_status_remote_shutdown{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_plugged_in Set if computer is plugged into UPS.
# TYPE apcupsd_status_plugged_in gauge
apcupsd_status_plugged_in{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_battery_present Indicates if battery is connected.
# TYPE apcupsd_status_battery_present gauge
apcupsd_status_battery_present{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_wakeup_mode In wakeup mode (typically lasts < 2s).
# TYPE apcupsd_status_wakeup_mode gauge
apcupsd_status_wakeup_mode{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_bypass_mode_from_internal_fault In bypass mode due to internal fault.
# TYPE apcupsd_status_bypass_mode_from_internal_fault gauge
apcupsd_status_bypass_mode_from_internal_fault{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_entering_bypass_mode_from_command Going to bypass mode due to command.
# TYPE apcupsd_status_entering_bypass_mode_from_command gauge
apcupsd_status_entering_bypass_mode_from_command{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_in_bypass_mode_from_command In bypass mode due to command.
# TYPE apcupsd_status_in_bypass_mode_from_command gauge
apcupsd_status_in_bypass_mode_from_command{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_leaving_bypass_mode Returning from bypass mode.
# TYPE apcupsd_status_leaving_bypass_mode gauge
apcupsd_status_leaving_bypass_mode{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_in_bypass_mode_from_manual_control In bypass mode due to manual bypass control.
# TYPE apcupsd_status_in_bypass_mode_from_manual_control gauge
apcupsd_status_in_bypass_mode_from_manual_control{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_ready_power_load_on_command Ready to power load on user command.
# TYPE apcupsd_status_ready_power_load_on_command gauge
apcupsd_status_ready_power_load_on_command{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_ready_power_load_on_command_or_line Ready to power load on user command or return of line power.
# TYPE apcupsd_status_ready_power_load_on_command_or_line gauge
apcupsd_status_ready_power_load_on_command_or_line{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_bypass_mode_from_electronics_fan_failure Fan failure in electronics, UPS in bypass.
# TYPE apcupsd_status_bypass_mode_from_electronics_fan_failure gauge
apcupsd_status_bypass_mode_from_electronics_fan_failure{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_isolation_unit_fan_failure Fan failure in isolation unit.
# TYPE apcupsd_status_isolation_unit_fan_failure gauge
apcupsd_status_isolation_unit_fan_failure{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_bypass_supply_failure Bypass supply failure.
# TYPE apcupsd_status_bypass_supply_failure gauge
apcupsd_status_bypass_supply_failure{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_bypass_mode_from_output_voltage_select_failure Output voltage select failure, UPS in bypass.
# TYPE apcupsd_status_bypass_mode_from_output_voltage_select_failure gauge
apcupsd_status_bypass_mode_from_output_voltage_select_failure{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_bypass_mode_from_dc_imbalance DC imbalance, UPS in bypass.
# TYPE apcupsd_status_bypass_mode_from_dc_imbalance gauge
apcupsd_status_bypass_mode_from_dc_imbalance{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_battery_disconnected Battery is disconnected.
# TYPE apcupsd_status_battery_disconnected gauge
apcupsd_status_battery_disconnected{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_relay_fault_smarttrim_or_smartboost Relay fault in SmartTrim or SmartBoost.
# TYPE apcupsd_status_relay_fault_smarttrim_or_smartboost gauge
apcupsd_status_relay_fault_smarttrim_or_smartboost{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_bad_output_voltage Bad output voltage.
# TYPE apcupsd_status_bad_output_voltage gauge
apcupsd_status_bad_output_voltage{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_output_unpowered_from_low_battery_shutdown Output unpowered due to shutdown by low battery.
# TYPE apcupsd_status_output_unpowered_from_low_battery_shutdown gauge
apcupsd_status_output_unpowered_from_low_battery_shutdown{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_cannot_transfer_to_battery_due_to_overload Unable to transfer to battery due to overload.
# TYPE apcupsd_status_cannot_transfer_to_battery_due_to_overload gauge
apcupsd_status_cannot_transfer_to_battery_due_to_overload{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_ups_off_from_main_relay_failure Main relay malfunction - UPS turned off.
# TYPE apcupsd_status_ups_off_from_main_relay_failure gauge
apcupsd_status_ups_off_from_main_relay_failure{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_sleep_mode_from_command In sleep mode from @ command (maybe others).
# TYPE apcupsd_status_sleep_mode_from_command gauge
apcupsd_status_sleep_mode_from_command{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_shutdown_mode_from_command In shutdown mode from S command.
# TYPE apcupsd_status_shutdown_mode_from_command gauge
apcupsd_status_shutdown_mode_from_command{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_battery_charger_failure Battery charger failure.
# TYPE apcupsd_status_battery_charger_failure gauge
apcupsd_status_battery_charger_failure{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_bypass_relay_failure Bypass relay malfunction.
# TYPE apcupsd_status_bypass_relay_failure gauge
apcupsd_status_bypass_relay_failure{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_status_operating_temperature_exceeded Normal operating temperature exceeded.
# TYPE apcupsd_status_operating_temperature_exceeded gauge
apcupsd_status_operating_temperature_exceeded{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 0
# HELP apcupsd_battery_last_replacement_timestamp_seconds Date battery last replaced.
# TYPE apcupsd_battery_last_replacement_timestamp_seconds gauge
apcupsd_battery_last_replacement_timestamp_seconds{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 1008633600
# HELP apcupsd_battery_nominal_output_volts Nominal output voltage to supply when on battery power.
# TYPE apcupsd_battery_nominal_output_volts gauge
apcupsd_battery_nominal_output_volts{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 115
# HELP apcupsd_battery_nominal_volts Nominal battery voltage.
# TYPE apcupsd_battery_nominal_volts gauge
apcupsd_battery_nominal_volts{ups="ups0",ups_name="UPS_IDEN",model="PowerStack 450",serial_number="NS0151240614"} 12
